--- a/SignUp.fxml
+++ b/SignUp.fxml
@@ -5,8 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="278.0" prefWidth="452.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="application.SignUpPageController">
+<AnchorPane prefHeight="278.0" prefWidth="452.0"  xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SignUpPageController">
    <children>
       <Label fx:id="lblsignup" layoutX="186.0" layoutY="23.0" text="Sign Up Page" />
       <Label fx:id="lblname" layoutX="78.0" layoutY="71.0" text="Name" />
@@ -17,6 +16,6 @@
       <PasswordField fx:id="txtpswd" layoutX="244.0" layoutY="144.0" />
       <PasswordField fx:id="txtrepsewd" layoutX="245.0" layoutY="183.0" />
       <ChoiceBox fx:id="txtuser" layoutX="245.0" layoutY="104.0" prefWidth="150.0" AnchorPane.rightAnchor="57.0" />
-      <Button fx:id="btnsignup" layoutX="200.0" layoutY="229.0" mnemonicParsing="false" text="Sign Up" />
+      <Button fx:id="btnsignup" layoutX="200.0" layoutY="229.0" mnemonicParsing="false" onAction="#NewUserHandler" text="Sign Up" />
    </children>
 </AnchorPane>
