--- a/WelcomePage.fxml
+++ b/WelcomePage.fxml
@@ -16,7 +16,7 @@
       <PasswordField fx:id="pswd_text" layoutX="218.0" layoutY="109.0" />
       <TextField fx:id="email_text" layoutX="218.0" layoutY="48.0" />
       <Separator fx:id="welcomeSep" layoutX="118.0" layoutY="221.0" prefWidth="200.0" />
-      <Button fx:id="login" layoutX="187.0" layoutY="155.0" mnemonicParsing="false"  text="Login " />
+      <Button fx:id="login" layoutX="187.0" layoutY="155.0" mnemonicParsing="false" onAction="#LoginHandler" text="Login " />
       <Button fx:id="signup" layoutX="152.0" layoutY="233.0" mnemonicParsing="false" onAction="#SignUpButtonHandler" text="New User? SignUp!" />
       <Button fx:id="for_pswd" layoutX="158.0" layoutY="188.0" mnemonicParsing="false" text="Forgot Password" />
       <Label fx:id="stat" layoutX="197.0" layoutY="14.0" prefHeight="17.0" prefWidth="44.0" text="Stat" />
