--- a/SignUp.fxml
+++ b/SignUp.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
@@ -8,18 +11,39 @@
 
 <AnchorPane prefHeight="462.0" prefWidth="503.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SignUpPageController">
    <children>
-      <Label fx:id="lblsignup" layoutX="171.0" layoutY="16.0" prefHeight="25.0" prefWidth="185.0" text="   SIGN UP USING YOUR IIITD ID" />
-      <Label fx:id="lblfirstname" layoutX="86.0" layoutY="71.0" text="First Name" />
-      <Label fx:id="lbltype" layoutX="86.0" layoutY="206.0" text="User Type" />
-      <Label fx:id="lblpswd" layoutX="90.0" layoutY="300.0" text="Enter Password" />
-      <Label fx:id="lblrepswd" layoutX="90.0" layoutY="335.0" text="Re-Enter Password" />
+      <Label fx:id="lblsignup" layoutX="204.0" prefHeight="70.0" prefWidth="81.0" text=" SIGN UP " underline="true" wrapText="true">
+         <font>
+            <Font size="18.0" />
+         </font></Label>
+      <Label fx:id="lblfirstname" layoutX="86.0" layoutY="71.0" text="First Name">
+         <font>
+            <Font size="16.0" />
+         </font></Label>
+      <Label fx:id="lbltype" layoutX="78.0" layoutY="202.0" text="User Type">
+         <font>
+            <Font size="16.0" />
+         </font></Label>
+      <Label fx:id="lblpswd" layoutX="77.0" layoutY="293.0" text="Enter Password">
+         <font>
+            <Font size="21.0" />
+         </font></Label>
+      <Label fx:id="lblrepswd" layoutX="66.0" layoutY="329.0" text="Re-Enter Password">
+         <font>
+            <Font size="20.0" />
+         </font></Label>
       <TextField fx:id="txtfirstname" layoutX="244.0" layoutY="67.0" />
       <PasswordField fx:id="txtpswd" layoutX="244.0" layoutY="296.0" />
       <PasswordField fx:id="txtrepsewd" layoutX="244.0" layoutY="331.0" />
       <Button fx:id="btnsignup" layoutX="193.0" layoutY="400.0" mnemonicParsing="false" onAction="#NewUserHandler" text="Sign Up" />
       <TextField fx:id="txtlastname" layoutX="244.0" layoutY="108.0" />
-      <Label fx:id="lbllastname" layoutX="86.0" layoutY="108.0" prefHeight="25.0" prefWidth="66.0" text="Last Name" />
-      <Label fx:id="lblemailid" layoutX="86.0" layoutY="149.0" prefHeight="25.0" prefWidth="58.0" text="Email Id" />
+      <Label fx:id="lbllastname" layoutX="86.0" layoutY="108.0" prefHeight="26.0" prefWidth="81.0" text="Last Name">
+         <font>
+            <Font size="17.0" />
+         </font></Label>
+      <Label fx:id="lblemailid" layoutX="86.0" layoutY="149.0" prefHeight="26.0" prefWidth="77.0" text="Email Id">
+         <font>
+            <Font size="17.0" />
+         </font></Label>
       <TextField fx:id="txtemailid" layoutX="244.0" layoutY="149.0" text="\@iiitd.ac.in" />
       <RadioButton fx:id="radiostudent" layoutX="165.0" layoutY="206.0" mnemonicParsing="false" text="Student">
          <toggleGroup>
@@ -28,7 +52,10 @@
       </RadioButton>
       <RadioButton fx:id="radiofaculty" layoutX="275.0" layoutY="206.0" mnemonicParsing="false" text="Faculty" toggleGroup="$user" />
       <RadioButton fx:id="radioadmin" layoutX="393.0" layoutY="206.0" mnemonicParsing="false" text="Admin" toggleGroup="$user" />
-      <Label fx:id="lblgender" layoutX="86.0" layoutY="247.0" prefHeight="25.0" prefWidth="53.0" text="Gender" />
+      <Label fx:id="lblgender" layoutX="84.0" layoutY="247.0" prefHeight="25.0" prefWidth="59.0" text="Gender">
+         <font>
+            <Font size="16.0" />
+         </font></Label>
       <RadioButton fx:id="radiomale" layoutX="165.0" layoutY="251.0" mnemonicParsing="false" text="Male">
          <toggleGroup>
             <ToggleGroup fx:id="gender" />
@@ -36,5 +63,10 @@
       </RadioButton>
       <RadioButton fx:id="radiofemale" layoutX="275.0" layoutY="251.0" mnemonicParsing="false" text="Female" toggleGroup="$gender" />
       <RadioButton fx:id="radioother" layoutX="395.0" layoutY="251.0" mnemonicParsing="false" text="Other" toggleGroup="$gender" />
+      <ImageView fitHeight="70.0" fitWidth="142.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../Desktop/iiitdelhi.jpg" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
