--- a/WelcomePage.fxml
+++ b/WelcomePage.fxml
@@ -1,24 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="WelcomePane" prefHeight="287.0" prefWidth="447.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.WelcomePageController">
+<AnchorPane fx:id="WelcomePane" prefHeight="363.0" prefWidth="510.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.WelcomePageController">
    <children>
-      <AnchorPane layoutX="-97.0" layoutY="-80.0" prefHeight="280.0" prefWidth="297.0">
-         <children>
-            <Label fx:id="email" layoutX="174.0" layoutY="132.0" text="Email ID" />
-            <Label fx:id="pswd" layoutX="171.0" layoutY="196.0" text="Password" />
-            <Label fx:id="stat" layoutX="262.0" layoutY="87.0" prefHeight="25.0" prefWidth="133.0" text="WELCOME TO IIIT DELHI" />
-         </children>
-      </AnchorPane>
-      <PasswordField fx:id="pswd_text" layoutX="218.0" layoutY="109.0" />
-      <TextField fx:id="email_text" layoutX="218.0" layoutY="48.0" text="\@iiitd.ac.in" />
-      <Separator fx:id="welcomeSep" layoutX="118.0" layoutY="221.0" prefWidth="200.0" />
-      <Button fx:id="login" layoutX="187.0" layoutY="155.0" mnemonicParsing="false" onAction="#LoginHandler" text="Login " />
-      <Button fx:id="signup" layoutX="152.0" layoutY="233.0" mnemonicParsing="false" onAction="#SignUpButtonHandler" text="New User? SignUp!" />
-      <Button fx:id="for_pswd" layoutX="158.0" layoutY="188.0" mnemonicParsing="false" text="Forgot Password" />
+      <PasswordField fx:id="pswd_text" layoutX="227.0" layoutY="145.0" />
+      <TextField fx:id="email_text" layoutX="227.0" layoutY="95.0" text="\@iiitd.ac.in" />
+      <Separator fx:id="welcomeSep" layoutY="268.0" prefHeight="5.0" prefWidth="510.0" />
+      <Button fx:id="login" layoutX="212.0" layoutY="192.0" mnemonicParsing="false" onAction="#LoginHandler" text="Login " />
+      <Button fx:id="signup" layoutX="177.0" layoutY="292.0" mnemonicParsing="false" onAction="#SignUpButtonHandler" text="New User? SignUp!" />
+      <Button fx:id="for_pswd" layoutX="187.0" layoutY="233.0" mnemonicParsing="false" text="Forgot Password ?" />
+      <Label fx:id="stat" layoutX="147.0" layoutY="20.0" prefHeight="47.0" prefWidth="259.0" text="WELCOME TO IIIT DELHI">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Label>
+      <Label fx:id="email" layoutX="93.0" layoutY="95.0" prefHeight="25.0" prefWidth="73.0" text="Email ID">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Label>
+      <Label fx:id="pswd" layoutX="93.0" layoutY="140.0" prefHeight="26.0" prefWidth="73.0" text="Password">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="85.0" fitWidth="114.0" layoutX="13.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../Desktop/iiitdelhi.jpg" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
