--- a/WelcomePage.fxml
+++ b/WelcomePage.fxml
@@ -32,7 +32,7 @@
       </Label>
       <ImageView fitHeight="85.0" fitWidth="114.0" layoutX="13.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../Desktop/iiitdelhi.jpg" />
+            <Image url="@../../../../Desktop/IIITDlogo.jpg" />
          </image>
       </ImageView>
    </children>
