--- a/AdminProfile.fxml
+++ b/AdminProfile.fxml
@@ -30,5 +30,6 @@
       <ImageView fx:id="image" fitHeight="112.0" fitWidth="105.0" layoutX="486.0" layoutY="61.0" pickOnBounds="true" preserveRatio="true" />
       <Label fx:id="lblphoto" layoutX="229.0" layoutY="298.0" text="upload photo name" />
       <TextField fx:id="txtphoto" layoutX="364.0" layoutY="294.0" />
+   		<Button fx:id="btnlogout" layoutX="456.0" layoutY="38.0" mnemonicParsing="false" onAction="#LogOutHandler" text="LogOut" />
    </children>
 </AnchorPane>
