--- a/AdminProfile.fxml
+++ b/AdminProfile.fxml
@@ -10,7 +10,7 @@
       <Separator layoutX="156.0" layoutY="59.0" orientation="VERTICAL" prefHeight="347.0" prefWidth="32.0" />
       <Label layoutX="199.0" layoutY="9.0" prefHeight="43.0" prefWidth="124.0" text="Admin View Profile" />
       <Button fx:id="btnviewroomrequest" layoutX="31.0" layoutY="131.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="125.0" text="View Room requests" />
-      <Button fx:id="btnbookroom" layoutX="31.0" layoutY="196.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="125.0" text="Book Room" />
+      <Button fx:id="btnbookroom" layoutX="31.0" layoutY="196.0" mnemonicParsing="false" onAction="#BookRoomHandler" prefHeight="25.0" prefWidth="125.0" text="Book Room" />
       <Label fx:id="lblfirstname" layoutX="261.0" layoutY="65.0" text="First name" />
       <Label fx:id="lbllastname" layoutX="261.0" layoutY="114.0" text="Last name" />
       <Label fx:id="lblusertype" layoutX="261.0" layoutY="164.0" text="User type" />
